<resources>
    <string name="app_name">Foodie</string>
    <string name="e_mail">"   E-mail"</string>
    <string name="log_in">LOG IN</string>
    <string name="register_here">"   Register here"</string>
    <string name="password">"   Password"</string>
    <string name="mobile_number_10_digits">"   Mobile Number (10-digits)"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">"   Name"</string>
    <string name="sharedPreferences">Foodie</string>
</resources>
