<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5FFAAB4"
    tools:context=".Register">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:hint="@string/name"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:hint="@string/e_mail"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="70dp"/>
    <EditText
        android:id="@+id/etMobile"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:maxLength="10"
        android:background="#FFFFFF"
        android:hint="@string/mobile_number_10_digits"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="120dp"/>
    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:hint="   Delivery Address"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="170dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:hint="@string/password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="260dp"/>
    <EditText
        android:id="@+id/etConfPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:hint="   Confirm Password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="310dp"/>
    <Button
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginHorizontal="20dp"
        android:background="#F4511E"
        android:text="REGISTER"
        android:textColor="#FFFFFF"
        android:textSize="19sp"/>

</RelativeLayout>